--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>DAOLab.fm</title>
      <!--Favicon-->
-     <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-     <link href="images/webclip.png" rel="apple-touch-icon">
+     <link href="img/favicon.png" rel="shortcut icon" type="image/x-icon">
+     <link href="img/webclip.png" rel="apple-touch-icon">
      <!--Bootstrap-->
      <title>Bootstrap</title>
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">        
