--- a/index.html
+++ b/index.html
@@ -19,111 +19,180 @@
  </head>
  <body>
      <header> <!--nav bar, logo-->
-         <nav class="navbar">
-             <div class="container-fluid">
-                 <a class="navbar-brand" href="./index.html">
-                     <img src="./img/Socky.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">DAOLab.fm
-                 </a>
+         <nav class="navbar bg-dark">
+             <div class="container-fluid ">
+                 <a class="navbar-brand" href="https://daocraft.cx/">
+                     <img src="./img/logo_500px_rectangular.jpg" alt="Logo" width="100%" height="24" class="d-inline-block align-text-center">                 </a>
              </div>
          </nav>
-         <aside class="container-fluid"> <!--title, subtitle and intro-->
-             <div class="row text-center"> <!--title, subtitle-->
-                <h1 class="col-12">
-                     Main Title
-                </h1>
-                <h2 class="col-12">
-                     Subtitle
-                </h2>
-                <p class="col-12 ">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quod facilis illum placeat dolorem molestiae perferendis
-                </p>
+         <aside class="container-fluid bg-light-subtle placeholder-wave"> <!--title, subtitle and intro-->
+             <div id="bg-head" class="row text-center"> <!--title, subtitle-->
+                 <h1 class="col-12">
+                    <span class="deco-h">DAO Lab</span>
+                 </h1>
+                 <h2 class="col-12">
+                    <span class="deco-h">Resources for web3 founders</span>
+                 </h2>
              </div>
-             <section class="row text-center"> <!--explanation boxes-->
-                <div class="col-6"> <!--Box1-->
-                     <h3> Box title 1</h3>
-                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div> 
-                <div class="col-6"> <!--Box2-->
-                    <h3> Box title 2</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-               </div> 
-             </section>
          </aside>
+         <section class="row text-center justify-content-center mt-30 mb-30"> <!--explanation boxes-->
+             <div class="col-4 text-center"> <!--Box1-->
+                 <h3>What are we trying to do?</h3>
+                 <p>A series of guest-centred podcasts around topics where the listener can expect a deep dive into a subject that is explored and practical conclusions are extracted, and focused con the learnings experts in the community.</p>
+             </div> 
+             <div class="col-4"> <!--Box2-->
+                 <h3>What can you expect?</h3>
+                <p>Each episode will contain several industry players giving their perspectives on the chosen topic. These players might appear in more than one episode, as the content gets divided in the production phase.</p>
+             </div> 
+        </section>
      </header>
-     <main class="container-fluid"> <!--title, subtitle and intro-->
-         <header class="row text-center"> <!--title, buttons-->
-             <h2 class="col-12">Section 2 title</h2>
-         </header>
-         <div class="row justify-content-center gap-4">
-             <button class="col-2 btn btn-secondary">Test 3</button>
-             <button class="col-2 btn btn-secondary">Test 2</button>
-             <button class="col-2 btn btn-secondary">Test 3</button>
-         </div>
-          <!--Episode 1-->
-         <section class="row align-self-start justify-content-center">
-             <div class="col-2">
-                 <img src="./img/Socky.jpg" alt="placeholder" width="100%" height="100%">
-             </div>
-             <div class="col-6 align-self-center">
-                 <h3> Box title 1</h3>
-                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                 <button class="col-1 justify-content-center btn btn-success">
-                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play" viewBox="0 0 16 16">
-                         <path d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z"/>
-                     </svg>
-                 </button>
-             </div>
+     <main class="container-fluid"> <!--title and intro-->
+         <section class="row text-center mb-0 bg-light-subtle pad-card--top"> 
+             <h2 class="col-12">Some Topics</h2>
+             <p class="col-12 mb-0">These are expected to evolve as new trends and knowledge is explored during the conversations.</p>
          </section>
-         <!--Episode 2-->
-         <section class="row align-self-start justify-content-center">
-             <div class="col-2">
-                 <img src="./img/Socky.jpg" alt="placeholder" width="100%" height="100%">
+         <!--Cards-->
+         <section class="row row-cols-md-4 g-5 mt-0 pb-30 bg-light-subtle pad-card--bot justify-content-center">
+             <!--CARD 1-->
+             <div class="col">
+                <div class="card h-100">
+                     <img src="./img/Data_sm.jpg" class="card-img-top card-img" alt="...">
+                     <div class="card-body">
+                         <h5 class="card-title">Data</h5>
+                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                     </div>
+                 </div>
              </div>
-             <div class="col-6 align-self-center">
-                 <h3> Box title 2</h3>
-                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                 <button class="col-1 justify-content-center btn btn-success">
-                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play" viewBox="0 0 16 16">
-                         <path d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z"/>
-                     </svg>
-                 </button>
+             <!--CARD 2-->
+             <div class="col">
+                 <div class="card h-100">
+                     <img src="./img/CommunityMgmnt_sm.jpg" class="card-img-top card-img" alt="...">
+                     <div class="card-body">
+                         <h5 class="card-title">Community Management</h5>
+                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                     </div>
+                 </div>
              </div>
-         </section>
-         <!--Episodes n-->
-         <section class="row align-self-start justify-content-center">
-             <div class="col-2">
-                 <img src="./img/Socky.jpg" alt="placeholder" width="100%" height="100%">
+             <!--CARD 3-->
+             <div class="col">
+                 <div class="card h-100">
+                     <img src="./img/treasury_sm.jpg" class="card-img-top card-img" alt="...">
+                     <div class="card-body">
+                         <h5 class="card-title">Treasury Management</h5>
+                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                     </div>
+                 </div>
              </div>
-             <div class="col-6 align-self-center">
-                 <h3> Box title n</h3>
-                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                 <button class="col-1 justify-content-center btn btn-success">
-                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play" viewBox="0 0 16 16">
-                         <path d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z"/>
-                     </svg>
-                 </button>
+             <!--CARD 4-->
+             <div class="col">
+                 <div class="card h-100">
+                     <img src="./img/marketing_sm.jpg" class="card-img-top card-img" alt="...">
+                     <div class="card-body">
+                         <h5 class="card-title">Marketing</h5>
+                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                     </div>
+                 </div>
+             </div>
+             <!--CARD 5-->
+             <div class="col">
+                 <div class="card h-100">
+                     <img src="./img/events_sm.jpg" class="card-img-top card-img" alt="...">
+                     <div class="card-body">
+                         <h5 class="card-title">Events</h5>
+                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                     </div>
+                 </div>
+             </div>
+             <!--CARD 6-->
+             <div class="col">
+                 <div class="card h-100">
+                     <img src="./img/integrations_sm.jpg" class="card-img-top card-img" alt="...">
+                     <div class="card-body">
+                         <h5 class="card-title">Integrations</h5>
+                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                      </div>
+                 </div>
+             </div>
+             <!--CARD 7-->
+             <div class="col">
+                 <div class="card h-100">
+                     <img src="./img/placeholder_sm.jpg" class="card-img-top card-img" alt="...">
+                     <div class="card-body">
+                         <h5 class="card-title">Bounty Management</h5>
+                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                     </div>
+                 </div>
+             </div>
+             <!--CARD 8-->
+             <div class="col">
+                 <div class="card h-100">
+                     <img src="./img/placeholder_sm.jpg" class="card-img-top card-img" alt="...">
+                     <div class="card-body">
+                         <h5 class="card-title">Remote Work</h5>
+                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                     </div>
+                 </div>
+             </div>
+             <!--CARD 9-->
+             <div class="col">
+                 <div class="card h-100">
+                     <img src="./img/placeholder_sm.jpg" class="card-img-top card-img" alt="...">
+                     <div class="card-body">
+                         <h5 class="card-title">Governomics</h5>
+                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                     </div>
+                 </div>
+             </div>
+             <!--CARD 10-->
+             <div class="col">
+                 <div class="card h-100">
+                     <img src="./img/placeholder_sm.jpg" class="card-img-top card-img" alt="...">
+                     <div class="card-body">
+                         <h5 class="card-title">People Operations</h5>
+                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                     </div>
+                 </div>
+             </div>
+             <!--CARD 11-->
+             <div class="col">
+                 <div class="card h-100">
+                     <img src="./img/placeholder_sm.jpg" class="card-img-top card-img" alt="...">
+                     <div class="card-body">
+                         <h5 class="card-title">TechOps</h5>
+                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                     </div>
+                 </div>
+             </div>
+             <!--CARD 12-->
+             <div class="col">
+                 <div class="card h-100">
+                     <img src="./img/placeholder_sm.jpg" class="card-img-top card-img" alt="...">
+                     <div class="card-body">
+                         <h5 class="card-title">Leadership</h5>
+                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                     </div>
+                 </div>
              </div>
          </section>
      </main>
      <aside class="container-fluid"> <!--contact-->
-         <header class="row text-center"> <!--title, subtitle-->
-             <h2 class="col-12">Contact title title</h2>
-             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, voluptates harum sequi eum cumque asperiores porro quibusdam</p>
-         </header>
+         <div class="row text-center"> <!--title, subtitle-->
+             <h2 class="col-12">Wen release, ser?</h2>
+             <h4 class="col-12">(Not very) soon™</h4>
+             <p>We're in the recording phase and planning on creating several episodes, which, in turn, take a lot of time to produce. Steady, lads.</p>
+         </div>
          <div class="row justify-content-center">  <!--button-->
-            <button class="col-3 btn btn-secondary">Test 1</button>
+            <button class="col-2 btn btn-secondary">Waiting list</button>
          </div>
      </aside>
-     <footer class="nav">
-         <div class="container-fluid text-center">
-             <div class="row align-items-center">
-                <a class="col-4" href="https://www.google.com"><h4>Link1</h4></a>
-                <a class="col-4" href="https://www.google.com"><h4>Link 1</h4></a>
-                <a class="col-4" href="https://www.google.com"><h4>Link 1</h4></a>
-             </div>
+     <div class="container-fluid text-center"> <!--bg-dark-subtle-->
+         <div class="row align-items-center">
+             <a class="col-4" href="https://www.google.com"><h4>Link1</h4></a>
+             <a class="col-4" href="https://www.google.com"><h4>Link 1</h4></a>
+             <a class="col-4" href="https://www.google.com"><h4>Link 1</h4></a>
          </div>
-     </footer>
+     </div>
      <!--BS script declaration -->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
  </body>
  </html>
