--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
          <section class="row text-center justify-content-center mt-30 mb-30"> <!--explanation boxes-->
              <div class="col-4 text-center"> <!--Box1-->
                  <h3>What are we trying to do?</h3>
-                 <p>A series of guest-centred podcasts around topics where the listener can expect a deep dive into a subject that is explored and practical conclusions are extracted, and focused con the learnings experts in the community.</p>
+                 <p>A series of topic-centred podcasts around topics where the listener can expect a deep dive into a subject that is explored and practical conclusions are extracted, and focused con the learnings experts in the community.</p>
              </div> 
              <div class="col-4"> <!--Box2-->
                  <h3>What can you expect?</h3>
